# synthwave

./: .gitignore  LICENSE  PAPER.md  README.md  meta-model.toml.example  pyproject.toml
src/meta_model/: auth.py  chat.py  config.py  errors.py  health.py  legacy_completion.py  metrics.py  reasoning.py  responses.py  routing.py  sanitize.py  server.py  streaming.py  upstream.py
src/meta_model/moa/: compaction.py  dispatch.py  fanout.py  multimodal.py  synthesizer.py  tools.py
src/meta_model/providers/: __init__.py  anthropic.py
tests/: test_auth.py  test_brand.py  test_chat_completions.py  test_compaction.py  test_config.py  test_cors.py  test_dispatch.py  test_f4_endpoints.py  test_fanout.py  test_health.py  test_inband_reasoning.py  test_legacy_completion.py  test_metrics.py  test_multimodal.py  test_providers_anthropic.py  test_responses.py  test_routing.py  test_sanitize_reasoning.py  test_server.py  test_smoke.py  test_streaming.py  test_synthesizer.py  test_tools.py  test_upstream.py
