[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-model"
version = "0.1.0"
description = "OpenAI-compatible Mixture-of-Agents meta-model server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Markus Bopp, Trac Systems" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
meta-model = "meta_model.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_model"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
